Added servlet filters to protect access to the page depending on the current role.

--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -1,9 +1,16 @@
 application.title=Больница “Ходоки”
-index.title=Стартовая страница
+application.welcome=Текущий пользователь
+application.button.logout=Выйти из учетной записи
 
 role.admin=Администратор
 role.doctor=Врач
 role.nurse=Медсестра
+
+login.title=Авторизация
+login.form.login=Имя пользователя
+login.form.password=Пароль
+login.button.login=Войти
+login.message=Имя пользователя или пароль не опознаны
 
 user.list.title=Список пользователей
 user.list.table.login=Логин пользователя
@@ -38,3 +45,6 @@ patient.edit.button.save=Сохранить
 patient.edit.button.delete=Удалить
 patient.edit.button.reset=Сброс
 patient.edit.button.cancel=Отмена
+
+patient.view.title=Информация о пациенте
+patient.view.table.id=Номер пациента
