Added the ability to view the initial information about the patient.

--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -6,6 +6,10 @@ role.admin=Администратор
 role.doctor=Врач
 role.nurse=Медсестра
 
+treatment.medicament=Медикамент
+treatment.procedure=Процедура
+treatment.surgery=Операция
+
 login.title=Авторизация
 login.form.login=Имя пользователя
 login.form.password=Пароль
@@ -47,4 +51,9 @@ patient.edit.button.reset=Сброс
 patient.edit.button.cancel=Отмена
 
 patient.view.title=Информация о пациенте
-patient.view.table.id=Номер пациента
+patient.view.table.id=Идентификационный номер пациента
+patient.view.table.firstname=Имя пациента
+patient.view.table.lastname=Фамилия пациента
+patient.view.table.ward=Номер палаты
+patient.view.button.edit=Редактирование информации пациента
+patient.view.button.cancel=Отмена
