Added minimal css framework

--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -1,6 +1,7 @@
 application.title=Больница “Ходоки”
 application.welcome=Текущий пользователь
 application.button.logout=Выйти из учетной записи
+application.logged=Вы вошли в систему как
 
 role.admin=Администратор
 role.doctor=Врач
