Corrected jsp pages to new css

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -3,7 +3,7 @@ application.welcome=Текущий пользователь
 application.button.logout=Выйти из учетной записи
 application.logged=Вы вошли в систему как
 
-role.admin=Администратор
+role.admin=Админ
 role.doctor=Врач
 role.nurse=Медсестра
 
