Implementing css framework

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,6 +55,9 @@ patient.view.title=Patient information
 patient.view.table.id=Patient identification  number
 patient.view.table.firstname=Patient first name
 patient.view.table.lastname=Patient last name
-patient.view.table.ward=Number of ward
+patient.view.table.ward=Number of ward:
 patient.view.button.edit=Edit patient information
 patient.view.button.cancel=Cancel
+patient.view.panel.profile=Profile
+patient.view.panel.history=Disease history
+patient.view.panel.treatment=Treatment
