--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -55,6 +55,9 @@ patient.view.title=Информация о пациенте
 patient.view.table.id=Идентификационный номер пациента
 patient.view.table.firstname=Имя пациента
 patient.view.table.lastname=Фамилия пациента
-patient.view.table.ward=Номер палаты
+patient.view.table.ward=Номер палаты:
 patient.view.button.edit=Редактирование информации пациента
 patient.view.button.cancel=Отмена
+patient.view.panel.profile=Профиль
+patient.view.panel.history=История болезни
+patient.view.panel.treatment=Лечение
