Added new functionality.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,3 +61,5 @@ patient.view.button.cancel=Cancel
 patient.view.panel.profile=Profile
 patient.view.panel.history=Disease history
 patient.view.panel.treatment=Treatment
+patient.view.disease_history.button.view=View
+patient.view.patient_diagnosis.table.diagnosis.title=Diagnosis title
