--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -61,3 +61,5 @@ patient.view.button.cancel=Отмена
 patient.view.panel.profile=Профиль
 patient.view.panel.history=История болезни
 patient.view.panel.treatment=Лечение
+patient.view.disease_history.button.view=View
+patient.view.patient_diagnosis.table.diagnosis.title=Diagnosis title
