Added new JSP (patient_diagnosis)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,5 +61,11 @@ patient.view.button.cancel=Cancel
 patient.view.panel.profile=Profile
 patient.view.panel.history=Disease history
 patient.view.panel.treatment=Treatment
+
 patient.view.disease_history.button.view=View
+
 patient.view.patient_diagnosis.table.diagnosis.title=Diagnosis title
+patient.view.patient_diagnosis.table.doctor.firstname=Doctor first name
+patient.view.patient_diagnosis.table.doctor.lastname=Doctor last name
+patient.view.patient_diagnosis.table.doctor.role=User role
+patient.view.patient_diagnosis.table.consultation.date=Consultation date
