--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -61,5 +61,11 @@ patient.view.button.cancel=Отмена
 patient.view.panel.profile=Профиль
 patient.view.panel.history=История болезни
 patient.view.panel.treatment=Лечение
-patient.view.disease_history.button.view=View
-patient.view.patient_diagnosis.table.diagnosis.title=Diagnosis title
+
+patient.view.disease_history.button.view=Подробнее
+
+patient.view.patient_diagnosis.table.diagnosis.title=Название диагноза
+patient.view.patient_diagnosis.table.doctor.firstname=Имя врача
+patient.view.patient_diagnosis.table.doctor.lastname=Фамилия врача
+patient.view.patient_diagnosis.table.doctor.role=Роль пользователя
+patient.view.patient_diagnosis.table.consultation.date=Дата консультации
