Added ability add and edit extended diagnosis.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -64,8 +64,14 @@ patient.view.panel.treatment=Treatment
 
 patient.view.disease_history.button.view=View
 
-patient.view.patient_diagnosis.table.diagnosis.title=Diagnosis title
-patient.view.patient_diagnosis.table.doctor.firstname=Doctor first name
-patient.view.patient_diagnosis.table.doctor.lastname=Doctor last name
-patient.view.patient_diagnosis.table.doctor.role=User role
-patient.view.patient_diagnosis.table.consultation.date=Consultation date
+patient.view.diagnosis.view.table.diagnosis.title=Diagnosis title
+patient.view.diagnosis.view.table.doctor.firstname=Doctor first name
+patient.view.diagnosis.view.table.doctor.lastname=Doctor last name
+patient.view.diagnosis.view.table.doctor.role=User role
+patient.view.diagnosis.view.table.consultation.date=Consultation date
+patient.view.diagnosis.view.title.edit=Edit exposed diagnosis
+patient.view.diagnosis.view.title.add=Add exposed diagnosis
+
+patient.view.diagnosis.edit.form.diagnosis.title=Diagnosis title
+patient.view.diagnosis.edit.form.diagnosis.choose=Choose a diagnosis
+patient.view.diagnosis.edit.form.consultation.date=Consultation date
