--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -64,8 +64,14 @@ patient.view.panel.treatment=Лечение
 
 patient.view.disease_history.button.view=Подробнее
 
-patient.view.patient_diagnosis.table.diagnosis.title=Название диагноза
-patient.view.patient_diagnosis.table.doctor.firstname=Имя врача
-patient.view.patient_diagnosis.table.doctor.lastname=Фамилия врача
-patient.view.patient_diagnosis.table.doctor.role=Роль пользователя
-patient.view.patient_diagnosis.table.consultation.date=Дата консультации
+patient.view.diagnosis.view.table.diagnosis.title=Название диагноза
+patient.view.diagnosis.view.table.doctor.firstname=Имя врача
+patient.view.diagnosis.view.table.doctor.lastname=Фамилия врача
+patient.view.diagnosis.view.table.doctor.role=Роль пользователя
+patient.view.diagnosis.view.table.consultation.date=Дата консультации
+patient.view.diagnosis.view.title.edit=Редактировать поставленный диагноз
+patient.view.diagnosis.view.title.add=Поставить диагноз
+
+patient.view.diagnosis.edit.form.diagnosis.title=Наименование диагноза
+patient.view.diagnosis.edit.form.diagnosis.choose=Выбрать диагноз
+patient.view.diagnosis.edit.form.consultation.date=Consultation date
