--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,3 +75,4 @@ patient.view.diagnosis.view.title.add=Add exposed diagnosis
 patient.view.diagnosis.edit.form.diagnosis.title=Diagnosis title
 patient.view.diagnosis.edit.form.diagnosis.choose=Choose a diagnosis
 patient.view.diagnosis.edit.form.consultation.date=Consultation date
+patient.view.disease_history.tile.treatment=Treatments:
