--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -55,7 +55,7 @@ patient.view.title=Информация о пациенте
 patient.view.table.id=Идентификационный номер пациента
 patient.view.table.firstname=Имя пациента
 patient.view.table.lastname=Фамилия пациента
-patient.view.table.ward=Номер палаты:
+patient.view.table.ward=Номер палаты: 
 patient.view.button.edit=Редактирование информации пациента
 patient.view.button.cancel=Отмена
 patient.view.panel.profile=Профиль
@@ -74,4 +74,5 @@ patient.view.diagnosis.view.title.add=Поставить диагноз
 
 patient.view.diagnosis.edit.form.diagnosis.title=Наименование диагноза
 patient.view.diagnosis.edit.form.diagnosis.choose=Выбрать диагноз
-patient.view.diagnosis.edit.form.consultation.date=Consultation date
+patient.view.diagnosis.edit.form.consultation.date=Дата консультации
+patient.view.disease_history.tile.treatment=Лечение:
