Added new feature

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,4 +75,21 @@ patient.view.diagnosis.view.title.add=Add exposed diagnosis
 patient.view.diagnosis.edit.form.diagnosis.title=Diagnosis title
 patient.view.diagnosis.edit.form.diagnosis.choose=Choose a diagnosis
 patient.view.diagnosis.edit.form.consultation.date=Consultation date
-patient.view.disease_history.tile.treatment=Treatments:
+patient.view.diagnosis.edit.button.makeAssignment=Make an assignment
+
+patient.view.disease_history.tile.treatment=Assignments:
+
+patient.view.treatment.list.title=List of outstanding assignments
+patient.view.treatment.list.table.treatmentTitle=Assignment title
+patient.view.treatment.list.table.patientDiagnosis=Extended diagnosis
+patient.view.treatment.list.table.treatmentType=Assignment type
+patient.view.treatment.list.table.performerRole=Performer post
+patient.view.treatment.list.table.performerName=Performer name
+patient.view.treatment.list.table.treatmentDone=Done
+
+patient.view.treatment.edit.title.edit=Edit assignment
+patient.view.treatment.edit.title.add=Make assignment
+patient.view.treatment.edit.form.treatment.title=Assignment title
+patient.view.treatment.edit.form.treatment.type=Assignment type
+patient.view.diagnosis.view.title=View extended diagnosis
+patient.view.disease_history.title=Disease history
