--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -75,4 +75,21 @@ patient.view.diagnosis.view.title.add=Поставить диагноз
 patient.view.diagnosis.edit.form.diagnosis.title=Наименование диагноза
 patient.view.diagnosis.edit.form.diagnosis.choose=Выбрать диагноз
 patient.view.diagnosis.edit.form.consultation.date=Дата консультации
-patient.view.disease_history.tile.treatment=Лечение:
+patient.view.diagnosis.edit.button.makeAssignment=Сделать назначение
+
+patient.view.disease_history.tile.treatment=Назначения:
+
+patient.view.treatment.list.title=Лист невыполненных назначений
+patient.view.treatment.list.table.treatmentTitle=Наименование назначения
+patient.view.treatment.list.table.patientDiagnosis=Поставленный диагноз
+patient.view.treatment.list.table.treatmentType=Тип назначения
+patient.view.treatment.list.table.performerRole=Должность лечащего врача
+patient.view.treatment.list.table.performerName=Имя лечащего врача
+patient.view.treatment.list.table.treatmentDone=Выполнено
+
+patient.view.treatment.edit.title.edit=Редактировать назначение
+patient.view.treatment.edit.title.add=Сделать назначение
+patient.view.treatment.edit.form.treatment.title=Наименование назначения
+patient.view.treatment.edit.form.treatment.type=Тип назначения
+patient.view.diagnosis.view.title=View extended diagnosis
+patient.view.disease_history.title=Disease history
