Added new feature

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,3 +93,5 @@ patient.view.treatment.edit.form.treatment.title=Assignment title
 patient.view.treatment.edit.form.treatment.type=Assignment type
 patient.view.diagnosis.view.title=View extended diagnosis
 patient.view.disease_history.title=Disease history
+patient.view.treatment.edit.form.treatment.done=Done
+patient.view.treatment.edit.form.diagnosis.title=Extended diagnosis
