--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -91,5 +91,7 @@ patient.view.treatment.edit.title.edit=Редактировать назначе
 patient.view.treatment.edit.title.add=Сделать назначение
 patient.view.treatment.edit.form.treatment.title=Наименование назначения
 patient.view.treatment.edit.form.treatment.type=Тип назначения
-patient.view.diagnosis.view.title=View extended diagnosis
-patient.view.disease_history.title=Disease history
+patient.view.diagnosis.view.title=Просмотр назначенного диагноза
+patient.view.disease_history.title=История болезни
+patient.view.treatment.edit.form.treatment.done=Done
+patient.view.treatment.edit.form.diagnosis.title=Extended diagnosis
