Added new feature

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,3 +95,10 @@ patient.view.diagnosis.view.title=View extended diagnosis
 patient.view.disease_history.title=Disease history
 patient.view.treatment.edit.form.treatment.done=Done
 patient.view.treatment.edit.form.diagnosis.title=Extended diagnosis
+patient.view.treatment.view.table.title=Assignment title
+patient.view.treatment.view.table.diagnosis=Extended diagnosis
+patient.view.treatment.view.table.type=Assignment type
+patient.view.treatment.view.table.performer.name=Performer name
+patient.view.treatment.view.table.done=Done
+patient.view.treatment.view.table.done.true=Yes
+patient.view.treatment.view.table.done.false=No
