Added new feature

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -71,6 +71,7 @@ patient.view.diagnosis.view.table.doctor.role=Роль пользователя
 patient.view.diagnosis.view.table.consultation.date=Дата консультации
 patient.view.diagnosis.view.title.edit=Редактировать поставленный диагноз
 patient.view.diagnosis.view.title.add=Поставить диагноз
+patient.view.diagnosis.view.title=Просмотр назначенного диагноза
 
 patient.view.diagnosis.edit.form.diagnosis.title=Наименование диагноза
 patient.view.diagnosis.edit.form.diagnosis.choose=Выбрать диагноз
@@ -78,6 +79,7 @@ patient.view.diagnosis.edit.form.consultation.date=Дата консультац
 patient.view.diagnosis.edit.button.makeAssignment=Сделать назначение
 
 patient.view.disease_history.tile.treatment=Назначения:
+patient.view.disease_history.title=История болезни
 
 patient.view.treatment.list.title=Лист невыполненных назначений
 patient.view.treatment.list.table.treatmentTitle=Наименование назначения
@@ -91,14 +93,13 @@ patient.view.treatment.edit.title.edit=Редактировать назначе
 patient.view.treatment.edit.title.add=Сделать назначение
 patient.view.treatment.edit.form.treatment.title=Наименование назначения
 patient.view.treatment.edit.form.treatment.type=Тип назначения
-patient.view.diagnosis.view.title=Просмотр назначенного диагноза
-patient.view.disease_history.title=История болезни
-patient.view.treatment.edit.form.treatment.done=Done
-patient.view.treatment.edit.form.diagnosis.title=Extended diagnosis
-patient.view.treatment.view.table.title=Assignment title
-patient.view.treatment.view.table.diagnosis=Extended diagnosis
-patient.view.treatment.view.table.type=Assignment type
-patient.view.treatment.view.table.performer.name=Performer name
-patient.view.treatment.view.table.done=Done
-patient.view.treatment.view.table.done.true=Yes
-patient.view.treatment.view.table.done.false=No
+patient.view.treatment.edit.form.treatment.done=Выполнено
+patient.view.treatment.edit.form.diagnosis.title=Назначенный диагноз
+
+patient.view.treatment.view.table.title=Наименование назначения
+patient.view.treatment.view.table.diagnosis=Назначенный диагноз
+patient.view.treatment.view.table.type=Тип назначения
+patient.view.treatment.view.table.performer.name=Имя исполнителя
+patient.view.treatment.view.table.done=Выполнено
+patient.view.treatment.view.table.done.true=Да
+patient.view.treatment.view.table.done.false=Нет
