--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -101,3 +101,5 @@ patient.view.treatment.view.table.performer.name=Performer name
 patient.view.treatment.view.table.done=Done
 patient.view.treatment.view.table.done.true=Yes
 patient.view.treatment.view.table.done.false=No
+patient.view.disease_history.button.makeAssignment=Make assignment
+patient.view.disease_history.button.makeDiagnosis=Make diagnosis
