--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -103,3 +103,5 @@ patient.view.treatment.view.table.performer.name=Имя исполнителя
 patient.view.treatment.view.table.done=Выполнено
 patient.view.treatment.view.table.done.true=Да
 patient.view.treatment.view.table.done.false=Нет
+patient.view.disease_history.button.makeAssignment=Make assignment
+patient.view.disease_history.button.makeDiagnosis=Make diagnosis
