Added new feature.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,15 @@ application.title=Hospital “Walkers”
 application.welcome=Current user is
 application.button.logout=Log out
 application.logged=You are logged in as
+application.button.password.change=Change password
+
+password.change.title=Change password
+password.change.form.old.password=Old password
+password.change.form.new.password=New password
+password.change.form.new.password.repeat=Repeat new password
+password.message.incorrect.data=Incorrectly entered data
+password.change.button.save=Save
+password.change.button.cancel=Cancel
 
 role.admin=Admin
 role.doctor=Doctor
@@ -15,7 +24,9 @@ login.title=Login page
 login.form.login=Username
 login.form.password=Password
 login.button.login=Log in
-login.message=Username or password is incorrect
+#login.message=Username or password is incorrect
+login.message.incorrect.password=Username or password is incorrect
+login.message.access.denied=Access is denied
 
 user.list.title=List of users
 user.list.table.login=User login
@@ -24,6 +35,7 @@ user.list.table.lastname=User last name
 user.list.table.role=User role
 user.list.button.add=Add
 
+user.edit.button.password.reset=Reset password
 user.edit.title.edit=Edit user information
 user.edit.title.add=Add new user
 user.edit.form.login=User login
@@ -65,6 +77,8 @@ patient.view.panel.treatment=Treatment
 patient.view.disease_history.button.view=View
 patient.view.disease_history.title=Disease history
 patient.view.disease_history.tile.treatment=Assignments:
+patient.view.disease_history.button.makeAssignment=Make assignment
+patient.view.disease_history.button.makeDiagnosis=Make diagnosis
 
 patient.view.diagnosis.view.table.diagnosis.title=Diagnosis title
 patient.view.diagnosis.view.table.doctor.firstname=Doctor first name
@@ -101,5 +115,6 @@ patient.view.treatment.view.table.performer.name=Performer name
 patient.view.treatment.view.table.done=Done
 patient.view.treatment.view.table.done.true=Yes
 patient.view.treatment.view.table.done.false=No
-patient.view.disease_history.button.makeAssignment=Make assignment
-patient.view.disease_history.button.makeDiagnosis=Make diagnosis
+patient.view.disease_history.button.discharge.patient=Discharge patient
+patient.discharge.title=Discharge patient
+patient.discharge.diagnosis.title=Make definitive diagnosis
