Error page added. Some bugs fixed.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+error.title=Error page
+
 application.title=Hospital “Walkers”
 application.welcome=Current user is
 application.button.logout=Log out
@@ -9,6 +11,7 @@ password.change.form.old.password=Old password
 password.change.form.new.password=New password
 password.change.form.new.password.repeat=Repeat new password
 password.message.incorrect.data=Incorrectly entered data
+password.message.not.equals=Incorrect old password
 password.change.button.save=Save
 password.change.button.cancel=Cancel
 
@@ -118,3 +121,4 @@ patient.view.treatment.view.table.done.false=No
 patient.view.disease_history.button.discharge.patient=Discharge patient
 patient.discharge.title=Discharge patient
 patient.discharge.diagnosis.title=Make definitive diagnosis
+patient.view.table.discharged=Discharged
