--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,3 +1,5 @@
+error.title=Ошибка
+
 application.title=Больница “Ходоки”
 application.welcome=Текущий пользователь
 application.button.logout=Выйти из учетной записи
@@ -9,6 +11,7 @@ password.change.form.old.password=Старый пароль
 password.change.form.new.password=Новый пароль
 password.change.form.new.password.repeat=Повтор нового пароля
 password.message.incorrect.data=Некорректно введенные данные
+password.message.not.equals=Некорректно введен старый пароль
 password.change.button.save=Сохранить
 
 role.admin=Админ
@@ -119,4 +122,4 @@ patient.view.treatment.view.table.done.false=Нет
 patient.view.disease_history.button.discharge.patient=Выписать пациента
 patient.discharge.title=Выписать пациента
 patient.discharge.diagnosis.title=Поставить окончательный диагноз
-
+patient.view.table.discharged=Выписан
