--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,7 @@ password.change.form.new.password.repeat=Repeat new password
 password.message.incorrect.data=Incorrectly entered data
 password.message.not.equals=Incorrect old password
 password.change.button.save=Save
-password.change.button.cancel=Cancel
+message.incorrect.data=Incorrectly entered data
 
 role.admin=Admin
 role.doctor=Doctor
@@ -26,8 +26,7 @@ treatment.surgery=Surgery
 login.title=Login page
 login.form.login=Username
 login.form.password=Password
-login.button.login=Log in
-#login.message=Username or password is incorrect
+login.button.login=Log inr
 login.message.incorrect.password=Username or password is incorrect
 login.message.access.denied=Access is denied
 
@@ -76,6 +75,7 @@ patient.view.button.cancel=Cancel
 patient.view.panel.profile=Profile
 patient.view.panel.history=Disease history
 patient.view.panel.treatment=Treatment
+patient.view.error.message.wrong.ward.number=Ward number should be more than zero
 
 patient.view.disease_history.button.view=View
 patient.view.disease_history.title=Disease history
