--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -13,6 +13,7 @@ password.change.form.new.password.repeat=Повтор нового пароля
 password.message.incorrect.data=Некорректно введенные данные
 password.message.not.equals=Некорректно введен старый пароль
 password.change.button.save=Сохранить
+message.incorrect.data=Некорректно введенные данные
 
 role.admin=Админ
 role.doctor=Врач
@@ -26,7 +27,6 @@ login.title=Авторизация
 login.form.login=Имя пользователя
 login.form.password=Пароль
 login.button.login=Войти
-#login.message=Имя пользователя или пароль не опознаны
 login.message.incorrect.password=Имя пользователя или пароль не опознанны
 login.message.access.denied=Доступ запрещён
 
@@ -75,6 +75,7 @@ patient.view.button.cancel=Отмена
 patient.view.panel.profile=Профиль
 patient.view.panel.history=История болезни
 patient.view.panel.treatment=Лечение
+patient.view.error.message.wrong.ward.number=Номер палаты должен быть больше нуля
 
 patient.view.disease_history.button.view=Подробнее
 
