--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,10 @@ password.change.form.new.password.repeat=Repeat new password
 password.message.incorrect.data=Incorrectly entered data
 password.message.not.equals=Incorrect old password
 password.change.button.save=Save
+
 message.incorrect.data=Incorrectly entered data
+message.cant.discharge=Do not prescribe a patient - not all appointments have been performed
+message.already.discharged=This patient was already discharged
 
 role.admin=Admin
 role.doctor=Doctor
