--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -13,7 +13,10 @@ password.change.form.new.password.repeat=Повтор нового пароля
 password.message.incorrect.data=Некорректно введенные данные
 password.message.not.equals=Некорректно введен старый пароль
 password.change.button.save=Сохранить
+
 message.incorrect.data=Некорректно введенные данные
+message.cant.discharge=Нельзя выписать пациента - выполнены не все назначения
+message.already.discharged=Пациент уже выписан
 
 role.admin=Админ
 role.doctor=Врач
