Added new feature - edit account information.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ application.welcome=Current user is
 application.button.logout=Log out
 application.logged=You are logged in as
 application.button.password.change=Change password
+application.button.account.edit=Edit account
 
 password.change.title=Change password
 password.change.form.old.password=Old password
@@ -51,6 +52,10 @@ user.edit.button.save=Save
 user.edit.button.delete=Delete
 user.edit.button.reset=Reset
 user.edit.button.cancel=Cancel
+
+account.edit.title=Edit account information
+account.edit.form.firstname=First name
+account.edit.form.lastname=Last name
 
 patient.list.title=List of patients
 patient.list.table.firstname=Patient first name
