--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -5,6 +5,7 @@ application.welcome=Текущий пользователь
 application.button.logout=Выйти из учетной записи
 application.logged=Вы вошли в систему как
 application.button.password.change=Сменить пароль
+application.button.account.edit=Редактировать аккаунт
 
 password.change.title=Сменить пароль
 password.change.form.old.password=Старый пароль
@@ -51,6 +52,10 @@ user.edit.button.save=Сохранить
 user.edit.button.delete=Удалить
 user.edit.button.reset=Сброс
 user.edit.button.cancel=Отмена
+
+account.edit.title=Редактирование данных аккаунта
+account.edit.form.firstname=Имя
+account.edit.form.lastname=Фамилия
 
 patient.list.title=Список пациентов
 patient.list.table.firstname=Имя пациента
